# putonghua

./: .env.example  .gitignore  AGENTS.md  LICENSE  PRODUCT.md  README.md  architecture.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: anki-publish-mapping.md
docs/adr/: 0001-ordered-sqlite-migrations.md  0002-ankiconnect-local-dependency.md  README.md
docs/work/: cli-ui-tui-plan.md  completed-promotion-anki-implementation-plan.md  completed-promotion-anki-sprint.md  current-state.md  tutorial-uat-checklist.md  tutorial-uat-plan.md
docs/work/templates/: task.md
playbooks/: anki-integration.md  first-vertical-slice.md
skills/add-prompt-asset/: SKILL.md
skills/add-sqlite-migration/: SKILL.md
skills/implement-cli-command/: SKILL.md
skills/prepare-session-handoff/: SKILL.md
skills/repository-orientation/: SKILL.md
skills/test-external-integration/: SKILL.md
src/putonghua/: __init__.py  logging.py  tests_support.py
src/putonghua/anki/: __init__.py  connectivity.py
src/putonghua/cli/: __init__.py  app.py  tui.py
src/putonghua/config/: loader.py  settings.py
src/putonghua/database/: connection.py  migrations.py  repositories.py
src/putonghua/models/: tui.py  (+8 more)
tests/: test_anki.py  test_anki_discovery.py  test_candidate_extraction.py  test_candidate_publish.py  test_chunk_review.py  test_cli.py  test_config.py  test_migrations.py  test_openai_transcription.py  test_prompt_loader.py  test_repositories.py  test_review_suggestions.py  test_study_chunks.py  test_tui_session.py  test_tutorial_service.py  test_youtube_import.py
(+31 files in other folders)
