[project]
name = "putonghua"
version = "0.1.0"
description = "Local-first Mandarin flashcard workflow foundation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.0,<0.29.0",
  "pydantic>=2.11.0,<3.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "rich>=14.0.0,<15.0.0",
  "typer>=0.16.0,<1.0.0",
  "yt-dlp>=2026.7.0,<2027.0.0",
]

[project.scripts]
putonghua = "putonghua.cli.app:main"

[dependency-groups]
dev = [
  "pyright>=1.1.403,<2.0.0",
  "pytest>=8.4.0,<9.0.0",
  "ruff>=0.12.0,<0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/putonghua"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
